Update index.html file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <!-- START BOX-LEFT -->
             <div class="box-left">
-                <img src="/img/collaborating.png" alt="Two people collaborating">
+                <img src="img/collaborating.png" alt="Two people collaborating">
             </div>
             <!-- END BOX-LEFT -->
 
