--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <br>
                 <!-- BUTTON  -->
-                <input type="button" value="Show Date And Time" id="display" onclick="showDate();">
+                <input type="button" value="Show Date And Time" id="display">
             </div>
             <!-- END BOX-RIGHT -->
         </div>
